// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/postcss.js should accept a \`json\` property and write exports to that file 1`] = `
"{
    \\"fixtures/folder/folder.css\\": {
        \\"folder\\": \\"folder\\"
    },
    \\"fixtures/local.css\\": {
        \\"folder\\": \\"white\\",
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\",
        \\"booga\\": \\"booga\\",
        \\"looga\\": \\"booga looga\\"
    },
    \\"fixtures/start.css\\": {
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\",
        \\"folder\\": \\"white\\",
        \\"wooga\\": \\"booga wooga\\",
        \\"booga\\": \\"booga\\",
        \\"tooga\\": \\"tooga\\"
    }
}"
`;

exports[`/postcss.js should accept json args in either position with postcss 1`] = `
"{
    \\"fixtures/simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"fooga\\"
    }
}"
`;

exports[`/postcss.js should accept normal processor options 1`] = `
".fooga_fooga {
    color: red;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZpeHR1cmVzL3NpbXBsZS5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBRUE7SUFDSSxXQUFXO0NBQ2QiLCJmaWxlIjoiZml4dHVyZXMvc2ltcGxlLmNzcyIsInNvdXJjZXNDb250ZW50IjpbIkB2YWx1ZSBzdHI6IFwic3RyaW5nXCI7XG5cbi5mb29nYSB7XG4gICAgY29sb3I6IHJlZDtcbn1cbiJdfQ== */"
`;

exports[`/postcss.js should be usable like a normal postcss plugin 1`] = `
".a {
    color: red;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZpeHR1cmVzL3NpbXBsZS5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBRUE7SUFDSSxXQUFXO0NBQ2QiLCJmaWxlIjoiZml4dHVyZXMvc2ltcGxlLmNzcyIsInNvdXJjZXNDb250ZW50IjpbIkB2YWx1ZSBzdHI6IFwic3RyaW5nXCI7XG5cbi5mb29nYSB7XG4gICAgY29sb3I6IHJlZDtcbn1cbiJdfQ== */"
`;

exports[`/postcss.js should output json when used within postcss 1`] = `
"{
    \\"fixtures/simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"fooga\\"
    }
}"
`;

exports[`/postcss.js should process CSS and output exports as a message 1`] = `
Array [
  Object {
    "exports": Object {
      "fooga": Array [
        "fooga",
      ],
      "str": "\\"string\\"",
    },
    "type": "modular-css-exports",
  },
]
`;

exports[`/postcss.js should process CSS and output the result 1`] = `
".fooga {
    color: red;
}
"
`;

exports[`/postcss.js should process CSS with dependencies and output the result 1`] = `
".booga { color: red; background: blue; }
.tooga { border: 1px solid white; }
"
`;

exports[`/postcss.js should use output filepath for json if a custom path isn't provided 1`] = `
"{
    \\"fixtures/folder/folder.css\\": {
        \\"folder\\": \\"folder\\"
    },
    \\"fixtures/local.css\\": {
        \\"folder\\": \\"white\\",
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\",
        \\"booga\\": \\"booga\\",
        \\"looga\\": \\"booga looga\\"
    },
    \\"fixtures/start.css\\": {
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\",
        \\"folder\\": \\"white\\",
        \\"wooga\\": \\"booga wooga\\",
        \\"booga\\": \\"booga\\",
        \\"tooga\\": \\"tooga\\"
    }
}"
`;
